chore: update Gradle wrapper to 8.14.5, enhance project configuration, and clean up code